tests/baselines/reference/functionCall6.errors.txt
==== tests/cases/compiler/functionCall6.ts (6 errors) ====
    function foo(a:string){}; 
    foo('bar');
    foo(2);
    ~~~
!!! error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Could not apply type 'string' to argument 1 which is of type 'number'.
    ~~~
!!! error TS2087: Could not select overload for 'call' expression.
    foo('foo', 'bar');
    ~~~
!!! error TS2081: Supplied parameters do not match any signature of call target.
    ~~~
!!! error TS2087: Could not select overload for 'call' expression.
    foo();
    ~~~
!!! error TS2081: Supplied parameters do not match any signature of call target.
    ~~~
!!! error TS2087: Could not select overload for 'call' expression.
    